--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 annotated-types==0.5.0
 anyio==3.7.1
 click==8.1.7
+dnspython==2.4.2
+email-validator==2.0.0.post2
 fastapi==0.103.1
 greenlet==2.0.2
 h11==0.14.0
