--- a/.env.template
+++ b/.env.template
@@ -1,1 +1,4 @@
-DB_CONNECTION="my://db.connection:string"
+ROOT_PATH_DEV=""
+ROOT_PATH_PROD=""
+DB_CONNECTION_DEV="my://db.connection:string"
+DB_CONNECTION_PROD="my://db.connection:string"
