--- a/requirements.txt
+++ b/requirements.txt
@@ -5,9 +5,11 @@ dnspython==2.4.2
 email-validator==2.0.0.post2
 fastapi==0.103.1
 greenlet==2.0.2
+gunicorn==21.2.0
 h11==0.14.0
 httptools==0.6.0
 idna==3.4
+packaging==23.2
 pydantic==2.3.0
 pydantic_core==2.6.3
 python-dotenv==1.0.0
