implementing some tests for Device routes and db operations

--- a/.env.template
+++ b/.env.template
@@ -2,3 +2,4 @@ ROOT_PATH_DEV=""
 ROOT_PATH_PROD=""
 DB_CONNECTION_DEV="my://db.connection:string"
 DB_CONNECTION_PROD="my://db.connection:string"
+DB_CONNECTION_TEST="my://db.connection:string"
