--- a/.env.template
+++ b/.env.template
@@ -3,3 +3,11 @@ ROOT_PATH_PROD=""
 DB_CONNECTION_DEV="my://db.connection:string"
 DB_CONNECTION_PROD="my://db.connection:string"
 DB_CONNECTION_TEST="my://db.connection:string"
+SECRET_KEY="mysecretkey"
+ALGORITHM="hashingalgorithm"
+ACCESS_TOKEN_EXPIRE_MINUTES=10
+REFRESH_TOKEN_EXPIRE_DAYS=1
+TOKEN_LENGTH=10
+REFRESH_SECRET_KEY="myrefreshsecretkey"
+SECURE_COOKIES=True
+SITE_DOMAIN="http://mysite.com"
