--- a/requirements.txt
+++ b/requirements.txt
@@ -1,22 +1,41 @@
-annotated-types==0.5.0
-anyio==3.7.1
-click==8.1.7
-dnspython==2.4.2
-email-validator==2.0.0.post2
-fastapi==0.109.1
-greenlet==2.0.2
-gunicorn==21.2.0
-h11==0.14.0
-httptools==0.6.0
-idna==3.4
+annotated-types==0.5.0                                                                                                         
+anyio==3.7.1                                                                                                                   
+bcrypt==4.1.2                                                                                                                  
+certifi==2024.2.2                                                                                                              
+cffi==1.16.0                                                                                                                   
+click==8.1.7                                                                                                           [15/474]
+cryptography==42.0.5                                                                                                           
+dnspython==2.4.2                                                                                                               
+ecdsa==0.18.0                                                                                                                  
+email-validator==2.0.0.post2                                                                                                   
+exceptiongroup==1.2.0                                                                                                          
+fastapi==0.109.1                                                                                                               
+greenlet==2.0.2                                                                                                                
+gunicorn==21.2.0                                                                                                               
+h11==0.14.0                                                                                                                    
+httpcore==1.0.2                                                                                                                
+httptools==0.6.0                                                                                                               
+httpx==0.26.0                                                                                                                  
+idna==3.4                                                                                                                      
+iniconfig==2.0.0                                                                                                               
 packaging==23.2
+passlib==1.7.4
+pluggy==1.4.0
+pyasn1==0.5.1
+pycparser==2.21
 pydantic==2.3.0
 pydantic_core==2.6.3
+pytest==8.0.0
 python-dotenv==1.0.0
+python-jose==3.3.0
+python-multipart==0.0.9
 PyYAML==6.0.1
+rsa==4.9
+six==1.16.0
 sniffio==1.3.0
 SQLAlchemy==2.0.21
-starlette==0.36.2
+starlette==0.35.1
+tomli==2.0.1
 typing_extensions==4.8.0
 uvicorn==0.23.2
 uvloop==0.17.0
