--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ anyio==3.7.1
 bcrypt==4.1.2                                                                                                                  
 certifi==2024.2.2                                                                                                              
 cffi==1.16.0                                                                                                                   
-click==8.1.7                                                                                                           [15/474]
+click==8.1.7                                                                                                           
 cryptography==42.0.5                                                                                                           
 dnspython==2.4.2                                                                                                               
 ecdsa==0.18.0                                                                                                                  
