--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,8 @@ python-dotenv = "^1.0.1"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.2.0"
+pytest-cov = "^5.0.0"
+pytest-xdist = "^3.6.1"
 
 [build-system]
 requires = ["poetry-core"]
