--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,8 @@ python-dotenv = "^1.0.1"
 pytest = "^8.2.0"
 pytest-cov = "^5.0.0"
 pytest-xdist = "^3.6.1"
+ipython = "^8.25.0"
+ipdb = "^0.13.13"
 
 [build-system]
 requires = ["poetry-core"]
