--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ passlib = {extras = ["bcrypt"], version = "^1.7.4"}
 fastapi-pagination = "^0.12.24"
 pytest-asyncio = "^0.23.6"
 python-dotenv = "^1.0.1"
+pyotp = "^2.9.0"
 
 
 [tool.poetry.group.dev.dependencies]
