--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ fastapi-pagination = "^0.12.24"
 pytest-asyncio = "^0.23.6"
 python-dotenv = "^1.0.1"
 pyotp = "^2.9.0"
+pymysql = "^1.1.1"
 
 
 [tool.poetry.group.dev.dependencies]
