--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [tool.poetry]
-name = "fastapi-sia-test"
+name = "remote-device-manager"
 version = "0.1.0"
 description = ""
 authors = ["Bruno <pazosbruno@gmail.com>"]
@@ -20,6 +20,7 @@ pytest-asyncio = "^0.23.6"
 python-dotenv = "^1.0.1"
 pyotp = "^2.9.0"
 pymysql = "^1.1.1"
+alembic = "^1.13.2"
 
 
 [tool.poetry.group.dev.dependencies]
