added new environment variables

--- a/.env.template
+++ b/.env.template
@@ -10,4 +10,6 @@ REFRESH_TOKEN_EXPIRE_DAYS=1
 TOKEN_LENGTH=10
 REFRESH_SECRET_KEY="myrefreshsecretkey"
 SECURE_COOKIES=True
-SITE_DOMAIN="http://mysite.com"
+API_SITE_DOMAIN_DEV="http://localhost/api"
+API_SITE_DOMAIN_PROD="http://api.mysite.com"
+MAIN_SITE_DOMAIN_PROD="http://mysite.com" 
