--- a/.env.template
+++ b/.env.template
@@ -1,8 +1,11 @@
+ENV=""
 ROOT_PATH_DEV=""
 ROOT_PATH_PROD=""
 DB_CONNECTION_DEV="my://db.connection:string"
 DB_CONNECTION_PROD="my://db.connection:string"
 DB_CONNECTION_TEST="my://db.connection:string"
+MAX_STRING_LENGTH=100
+MAX_REFRESH_TOKEN_LENGTH=100
 SECRET_KEY="mysecretkey"
 ALGORITHM="hashingalgorithm"
 ACCESS_TOKEN_EXPIRE_MINUTES=10
@@ -12,4 +15,13 @@ REFRESH_SECRET_KEY="myrefreshsecretkey"
 SECURE_COOKIES=True
 API_SITE_DOMAIN_DEV="http://localhost/api"
 API_SITE_DOMAIN_PROD="http://api.mysite.com"
-MAIN_SITE_DOMAIN_PROD="http://mysite.com" 
+API_DOCS_SITE_DOMAIN_DEV="localhost:port/docs"
+API_DOCS_SITE_DOMAIN_PROD="http://api.mysite.com/docs"
+DEVICE_SHARE_URL_BASE_DEV="localhost:port/api"
+DEVICE_SHARE_URL_BASE_PROD="https://localhost/api"
+MAIN_SITE_DOMAIN_PROD="https://mysite.com" 
+RUSTDESK_CLIENT_URL="http://localhost:port/test.html"
+SECRET_OTP_KEY="mysecretotpkey"
+OTP_INTERVAL_SECS=10
+SHARE_URL_MAX_DURATION_MINUTES=1
+HEARTBEAT_S=120
