--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ python-dotenv = "^1.0.1"
 pyotp = "^2.9.0"
 pymysql = "^1.1.1"
 alembic = "^1.13.2"
+pytest-dotenv = "^0.5.2"
 
 
 [tool.poetry.group.dev.dependencies]
