added missing environment variables to env.template

--- a/.env.template
+++ b/.env.template
@@ -25,3 +25,5 @@ SECRET_OTP_KEY="mysecretotpkey"
 OTP_INTERVAL_SECS=10
 SHARE_URL_MAX_DURATION_MINUTES=1
 HEARTBEAT_S=120
+RECOVERY_TOKEN_EXPIRATION_MINUTES=15
+MAX_TOLERANCE_HEARTBEATS=3
