adding docker files + requirements.txt + updating .env.template

--- a/.env.template
+++ b/.env.template
@@ -4,6 +4,12 @@ ROOT_PATH_PROD=""
 DB_CONNECTION_DEV="my://db.connection:string"
 DB_CONNECTION_PROD="my://db.connection:string"
 DB_CONNECTION_TEST="my://db.connection:string"
+#MYSQL_HOST="10.0.0.10"
+MYSQL_HOST=db_service
+MYSQL_ROOT_PASSWORD="dbrootpassword"
+MYSQL_DATABASE="dbname"
+MYSQL_USER="dbuser"
+MYSQL_PASSWORD="dbpassword"
 MAX_STRING_LENGTH=100
 MAX_REFRESH_TOKEN_LENGTH=100
 SECRET_KEY="mysecretkey"
